[package]
name = "movingai"
description = "MovingAI Benchmark Map/Scen File Parser"
version = "1.1.0"
authors = ["Davide Aversa <thek3nger@gmail.com>"]
keywords = ["pathfinding", "benchmark", "parser"]
categories = ["parsing", "science", "simulation"]
homepage = "https://github.com/THeK3nger/movingai-rust"
repository = "https://github.com/THeK3nger/movingai-rust"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]

maintenance = { status = "actively-developed" }
travis-ci = { repository = "THeK3nger/movingai-rust", branch = "master" }

[dependencies]
serde = { version = "1.0.99", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.40"